{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 48,
  "lineage": "a66d15dc-f4ed-d098-2b6f-44b7cda6973d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088025853:network-acl/acl-021787adc202d97f9",
            "default_network_acl_id": "acl-021787adc202d97f9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-021787adc202d97f9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "597088025853",
            "subnet_ids": [
              "subnet-014565a6e0aaa7910",
              "subnet-07b80a8db31b15522"
            ],
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-052de07859ab1ac0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088025853:route-table/rtb-0cddfa96a519b679b",
            "default_route_table_id": "rtb-0cddfa96a519b679b",
            "id": "rtb-0cddfa96a519b679b",
            "owner_id": "597088025853",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-052de07859ab1ac0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088025853:security-group/sg-06c0475a6ce861538",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06c0475a6ce861538",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "597088025853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-052de07859ab1ac0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f939abe59a8ecf39",
            "arn": "arn:aws:ec2:us-east-1:597088025853:elastic-ip/eipalloc-0f939abe59a8ecf39",
            "domain": "vpc",
            "id": "eipalloc-0f939abe59a8ecf39",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-6-98-85.compute-1.amazonaws.com",
            "public_ip": "52.6.98.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088025853:internet-gateway/igw-0ada334d277900b26",
            "id": "igw-0ada334d277900b26",
            "owner_id": "597088025853",
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-052de07859ab1ac0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f939abe59a8ecf39",
            "association_id": "eipassoc-0d14e3a50059e612e",
            "connectivity_type": "public",
            "id": "nat-0dcedbc0ad6feabc4",
            "network_interface_id": "eni-0f127b196f7b5b2b0",
            "private_ip": "12.0.2.7",
            "public_ip": "52.6.98.85",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-014565a6e0aaa7910",
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06328f6bc41c0427c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0dcedbc0ad6feabc4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06328f6bc41c0427c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ada334d277900b26",
            "id": "r-rtb-0ca64d271a3eb649b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ca64d271a3eb649b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088025853:route-table/rtb-06328f6bc41c0427c",
            "id": "rtb-06328f6bc41c0427c",
            "owner_id": "597088025853",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-052de07859ab1ac0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088025853:route-table/rtb-0ca64d271a3eb649b",
            "id": "rtb-0ca64d271a3eb649b",
            "owner_id": "597088025853",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-052de07859ab1ac0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d40a4eefe0a3ad43",
            "route_table_id": "rtb-06328f6bc41c0427c",
            "subnet_id": "subnet-07b80a8db31b15522"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064e49594fb22fd98",
            "route_table_id": "rtb-0ca64d271a3eb649b",
            "subnet_id": "subnet-014565a6e0aaa7910"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088025853:subnet/subnet-07b80a8db31b15522",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "12.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b80a8db31b15522",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597088025853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-052de07859ab1ac0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088025853:subnet/subnet-014565a6e0aaa7910",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "12.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014565a6e0aaa7910",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597088025853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-052de07859ab1ac0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088025853:vpc/vpc-052de07859ab1ac0e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-021787adc202d97f9",
            "default_route_table_id": "rtb-0cddfa96a519b679b",
            "default_security_group_id": "sg-06c0475a6ce861538",
            "dhcp_options_id": "dopt-0b71cde277455e322",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-052de07859ab1ac0e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cddfa96a519b679b",
            "owner_id": "597088025853",
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-2",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}